--- a/Projects/Frontend/bazaar-frontend/src/screens/Add-Product/addproduct.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/Add-Product/addproduct.scss
@@ -1,7 +1,16 @@
-.error {
-    color: red;
-}
 
-.deneme {
-    text-align: center;
+.form-group {
+    & label {
+        text-align: right;
+        font-size: 100%;
+        font-weight: 500;
+    }
+
+    & select {
+        background-color: #f6f6f6;
+    }
+
+    & .error {
+        color: red;
+    }
 }
